--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.2.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
